# autonomous-claude

./: .gitignore  AUTONOMOUS_MCP_FULL_GUIDE - PART_1.txt  AUTONOMOUS_MCP_FULL_GUIDE_PART_2.txt  AUTONOMOUS_MCP_MASTER_GUIDE SESSION2.txt  AUTONOMOUS_MCP_MASTER_GUIDE.txt  USAGE.md  architecture.md  package-lock.json  package.json  requirements.txt  to-do-session2.md  to-do.md
mcp-orchestrator/: Dockerfile  INSTALL.md  README.md  TODO.md  __init__.py  autonomous_operator.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  security.py
mcp-orchestrator/agents/: __init__.py  agent_manager.py  approval_agent.py  base_agent.py  conversation_agent.py  debugger_agent.py  decision_agent.py  executor_agent.py  monitor_agent.py  planner_agent.py  planning_agent.py  task_manager_agent.py  testing_agent.py
mcp-orchestrator/api/: server.py
mcp-orchestrator/core/: __init__.py  capability_creator.py  capability_resolver.py  cloud_code_adapter.py  config.py  continuous_updater.py  execution_engine.py  execution_planner.py  intelligent_orchestrator.py  main_orchestrator.py  orchestrator.py  pipeline.py  scheduler.py  self_healing.py  source_of_truth.py  workflow_engine.py
mcp-orchestrator/docs/: ARCHITECTURE.md  DESIGN_SYSTEM.md  USAGE_GUIDE.md
mcp-orchestrator/hooks/: __init__.py  approval_hook.py  base_hook.py  hook_system.py  post_step_hook.py  pre_step_hook.py  stop_hook.py
mcp-orchestrator/integrations/: __init__.py  telegram_bot.py
mcp-orchestrator/mcp/: __init__.py  capability_matcher.py  registry.py
mcp-orchestrator/mcp_orchestrator/: __init__.py  agents.py  hooks.py  orchestrator.py  setup.py  skills.py
(+86 files in other folders)
