[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-orchestrator"
version = "0.1.0"
description = "Autonomous Operator SDK - AI-powered task orchestration for any project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Autonomous Cloud"}
]
keywords = ["ai", "orchestrator", "automation", "claude", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/autonomous-cloud/mcp-orchestrator"
Documentation = "https://github.com/autonomous-cloud/mcp-orchestrator#readme"
Repository = "https://github.com/autonomous-cloud/mcp-orchestrator"

[project.scripts]
mcp-orchestrator = "api.server:main"
mcp-setup = "mcp_orchestrator.setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_orchestrator*", "core*", "api*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]
